# LibrarySystem_2.2

./: .editorconfig  .gitignore  BUILD.md  CHECKLIST.md  CMakeLists.txt  CMakeUserPresets.json  GITHUB_UPLOAD_VS.md  LICENSE  QUICK_START.md  README.md  SETUP.md  SONARCLOUD_SETUP.md  TROUBLESHOOTING.md  mainwindow.cpp  sonar-project.properties
.github/workflows/: README.md  build.yml  sonarcloud.yml
forms/: mainwindow.ui
include/: book.h  command.h  commandmanager.h  commands.h  employee.h  exceptions.h  filemanager.h  item.h  librarian.h  librarycontainer.h  librarymember.h  librarysystem.h  mainwindow.h  manager.h  membercontainer.h  person.h
src/: book.cpp  commandmanager.cpp  employee.cpp  filemanager.cpp  item.cpp  librarian.cpp  librarycontainer.cpp  librarymember.cpp  librarysystem.cpp  main.cpp  mainwindow.cpp  manager.cpp  membercontainer.cpp  person.cpp
